src/objects/Supplier__c.object
<CustomObject>
    <description>Corp Contracts - used to track suppliers</description>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Industry_Commodity__c</fullName>
        <label>Company Industry/Commodity</label>
        <picklist>
            <picklistValues>
                <fullName>Business Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consulting/HR/Professional Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facilities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fleet/Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Furniture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing/Advertising/Printing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Program Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Travel/Meeting Services</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Company_Structure_Other__c</fullName>
        <label>Company Structure - Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Structure__c</fullName>
        <label>Company Structure</label>
        <picklist>
            <picklistValues>
                <fullName>Corporation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LLC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Profit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partnership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sole Proprietorship</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact_Cell__c</fullName>
        <label>Contact Cell</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <label>Contact Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact_Fax__c</fullName>
        <label>Contact Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <label>Contact Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone__c</fullName>
        <label>Contact Phone</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contact_Title__c</fullName>
        <label>Contact Title</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insurance_Cert_on_File__c</fullName>
        <label>Insurance Cert on File?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MWOB_If_Yes__c</fullName>
        <label>MWOB - If &apos;Yes&apos;</label>
        <picklist>
            <controllingField>MWOB__c</controllingField>
            <picklistValues>
                <fullName>Disadvantaged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minority</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Small Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Veteran</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Woman-Owned</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MWOB__c</fullName>
        <label>MWOB</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Supplier_Address_1__c</fullName>
        <label>Supplier Address 1</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_Address_2__c</fullName>
        <label>Supplier Address 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_City__c</fullName>
        <label>Supplier City</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_D_B_Number__c</fullName>
        <label>Supplier D&amp;B Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_Doing_Business_As_Name__c</fullName>
        <label>Supplier Doing Business As Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_Fax__c</fullName>
        <label>Supplier Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Supplier_Phone__c</fullName>
        <label>Supplier Phone</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Supplier_State__c</fullName>
        <label>Supplier State</label>
        <length>2</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_Tax_ID_Number__c</fullName>
        <label>Supplier Tax ID Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_Website__c</fullName>
        <label>Supplier Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Supplier_Zip__c</fullName>
        <label>Supplier Zip</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>W_9_on_file__c</fullName>
        <label>W-9 on file?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Supplier</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Suppliers</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>MWOB_is_yes</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( MWOB__c ,&apos;Yes&apos;)&amp;&amp; ISPICKVAL( MWOB_If_Yes__c, &apos;&apos; )</errorConditionFormula>
        <errorDisplayField>MWOB_If_Yes__c</errorDisplayField>
        <errorMessage>More information is required when MWOB is yes</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Other_Company_Structure</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( Company_Structure__c ,&apos;Other&apos;) &amp;&amp; ISBLANK( Company_Structure_Other__c )</errorConditionFormula>
        <errorDisplayField>Company_Structure_Other__c</errorDisplayField>
        <errorMessage>More information is required when Company Structure = Other.
Please fill out the field -  &apos;Company Structure - other&apos;</errorMessage>
    </validationRules>
</CustomObject>